force-app/main/default/objects/Holiday__c/fields/HolidayDate__c.field-meta.xml
<CustomField>
    <fullName>HolidayDate__c</fullName>
    <label>Holiday Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>