force-app/main/default/objects/Holiday__c/fields/HolidayType__c.field-meta.xml
<CustomField>
    <fullName>HolidayType__c</fullName>
    <label>Holiday Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>