force-app/main/default/objects/Holiday__c/fields/SouthAfricanID__c.field-meta.xml
<CustomField>
    <fullName>SouthAfricanID__c</fullName>
    <label>South African ID</label>
    <referenceTo>SouthAfricanID__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>Holidays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>